src/mock-data/data/samples/03-ingress-isolated-pod/03-ingress-isolated-pod-01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-ingress-isolated-pod
  labels:
    name: test-ingress-isolated-pod
