src/mock-data/data/samples/03-ingress-isolated-pod/03-ingress-isolated-pod-04-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: test-ingress-isolated-pod
spec:
  podSelector:
    matchLabels:
      app: isolated-nginx
  policyTypes:
  - Ingress
